# Gawdat_Django_Template

./: .dockerignore  .env  .env.local  .env.tmp  .gitignore  .gitleaksignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHENTICATION_CONFIG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  callback.html  check_env.py  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  download_figma_assets.py  dummy.env  find_env_vars.py  justfile  local.yml  manage.py  production.yml  pyproject.toml  requirements.in  schema.yaml  schema.yml  setup.cfg  summary.md  temp.txt  temp2.txt  test_google_auth.html  todo  (+1 more)
.claude/: settings.json
.envs/.example/: django.env  general.env  payment.env
.envs/.local/: .django  .postgres  django.env  firebase.env  general.env  postgres.env
.envs/.prod/: .django
.envs/.production/: .django  .postgres
.envs/.staging/: .django  .postgres
.github/: ci.yml  commit-naming.yml  dependabot.yml  deploy-dev.yaml  deploy-prod.yaml  old-pr-checks.yml  old-pr-clean.yml  pr-checks.yml  pr-naming.yml  release.yml
.github/actions/setup-docker-env/: action.yml
.github/workflows/: _reusable-build-and-test.yml  _reusable-build-production.yml  _reusable-django-tests.yml  _reusable-docker-build.yml  _reusable-docker-push-ecr.yml  _reusable-quality-gates.yml  _reusable-security-scan.yml  build_test_artifact.yml  cannot-change-files.yml  check_branch_sync.yml  ci.yml  clean-pr.yml  commit-naming.yml  dependency-update.yml  django.yml  linter.yml  main.yml  pr-checks.yml  pr-naming.yml  pr.yml  release.yml  security.yml  test_compose_pr.yml
.github/workflows/archive/: README.md
.ipython/profile_default/: history.sqlite
app_name/: asgi.py  urls.py  wsgi.py
app_name/settings/: common.py  dev.py  prod.py
apps/appInfo/: apps.py  translation.py
apps/appInfo/admin/: about.py  terms.py
apps/appInfo/fields/: app_info.py  banner.py  banner_group.py  contact_us.py  onboarding.py  pop_up_banner.py  social_account.py  system_config.py
apps/appInfo/migrations/: 0001_initial.py  0002_contactus.py  0002_initial.py  0003_alter_faq_answer_alter_faq_answer_ar_and_more.py  0003_delete_systemconfig.py  0003_onboarding.py  0004_alter_contactus_customer.py  0004_alter_contactus_options.py  0004_delete_socialaccount.py  0004_onboarding_sub_text_ar_onboarding_sub_text_en_and_more.py  0005_bannergroup.py  0006_bannergroup_name_ar_bannergroup_name_en.py  0007_banner.py  0008_popupbanner_historicalpopupbanner_popuptracking.py  0009_systemconfig_referral_points.py  0010_remove_systemconfig_referral_points.py
apps/appInfo/models/: about.py  app_info.py  banner.py  (+8 more)
apps/authentication/: urls.py
apps/channel/: apps.py  constants.py  data_class.py  email_templates.py  errors.py  signals.py  tasks.py  template_message.py  translation.py
apps/common/: apps.py  normal_urls.py  normal_views.py
apps/complex_template/: apps.py
apps/core/: apps.py
apps/location/: apps.py  constants.py  errors.py  translation.py
apps/notification/: apps.py
apps/payment/: apps.py  constants.py
apps/products/: constants.py  translation.py
apps/template/: apps.py
apps/template_app/: apps.py
apps/users/: admin.py  apps.py  constants.py  data_class.py  models.py
assets/certs/: my-dev-env.local.crt  my-dev-env.local.key
assets/fixtures/: appinfo.json  banners.json  brands.json  categories.json  countries.json  customers.json  faqs.json  payment.json  products.json  social_account.json  system_config.json  test2.json  users.json
common/: admin.py  apps.py  error_codes.py  export_import.py  money_patches.py  signals.py  urls.py
common/base/: admin.py  basemodeladmin.py  inline.py  modeladmin.py
common/boilerplate/: admin.py
common/generators/: base.py  model_utils.py
common/helpers/: constants.py  custom_fields.py
common/insights/: dashboard_callback.py
common/mixins/: pass_request_to_form.py  validators.py
common/rules/: predicates.py
common/template_app/: apps.py
common/views/: urls.py  web_view.py
config/: __init__.py  api_router.py  celery_app.py  custom_exception_handler.py  env_settings.py  middleware.py  schema_custom.py  schema_extensions.py  schema_hooks.py  urls.py  wsgi.py
config/helpers/: account_adapter.py  allauth_adapter.py  authentication.py  checks.py  env.py  exception_handler.py  oauth_adapter.py
config/integrations/: djmoney.py  drf.py  fcm.py  firebase.py  sentry.py  unfold.py
config/middleware/: __init__.py  allauth_error_formatter.py  csrf_exempt.py
config/settings/: base.py  local.py  prod.py  production.py  test.py
docs/: AUTHENTICATION_CONFIG.md  CONFIGURATION_CHANGES.md  DEVELOPER_TESTING_GUIDE.md  PASSWORDLESS_AUTH_API.md  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
factories/: QUICKSTART.md  README.md  __init__.py  factories.py  loader.py
figma_images/: README.md
frontend/: .dockerignore  package.json
frontend/public/: index.html
frontend/src/: NavBar.js  Router.js  init.js
requirements/: base.txt  local.txt  prod.txt  production.txt
scripts/: apidog_schema_upload.txt  deploy.sh  docker-entrypoint  docker-entrypoint.dev  docker-entrypoint.local  docker-entrypoint.prod  encode_firebase.sh  fetch_secrets.py  git-pr.sh  setup_server.sh  upload_update_all_project.sh
scripts/python/: check_env.py
scripts/shell/: check_migrations.sh
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/bootstrap/: main.tf  output.tf  variables.tf
tests/: README.md  TESTING.md  conftest.py  test_admin.py  test_admin_dashboard.py  test_always_success.py  test_api_endpoints.py  test_customer_signup_flow.py  test_factory_coverage.py  test_fixtures_loading.py
tests/admin/: conftest.py  test_admin_dashboard.py  test_admin_data_coverage.py  test_admin_export.py  test_admin_operations.py  test_admin_pages.py  test_factory_coverage.py  test_field_permissions.py  test_unfold_sidebar.py
tests/api/: test_api_retrieve_endpoints.py
(+558 files in other folders)
